# cuda_hello_world_catkin

./: .clang-format  .cquery  .travis.yml  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
app/: cuda-hello-world-app.cc
include/cuda_hello_world/: hello-world-node.h  hello-world.h  test-entrypoint.h
share/: build_and_test  prepare-ci  run_demo
src/: hello-world-node.cc  hello-world.cu
test/sanity-check/: sanity-check-test.cc
